--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -1,7 +1,9 @@
+<div class="container-logo">
+    <img src="{{asset('/img/LogoNN.png')}}" alt="logo newname">
+    {# <i id="arrow-logo" class="fas fa-long-arrow-alt-left"></i> #}
+    <p class="menu-logo">Menu</p>
+</div>
 <nav class="container-nav">
-    <div class="container-logo">
-        <img src="{{asset('/img/LogoNN.png')}}" alt="logo newname">
-    </div>
     <div>
         <ul>
             <li><a href="{{path('app_home')}}">Home</a></li>
