--- a/templates/home/join.html.twig
+++ b/templates/home/join.html.twig
@@ -9,7 +9,7 @@
         <h2>Rejoignez nous !</h2>
         <p>Vous souhaitez une communauté soudé, force de son experience RP ? N'hésitez plus, ce serveur est fait pour vous !</p>
         <p>Le serveur est sous WhiteList, c'est à dire que vous allez devoir remplir un formulaire puis passer un entretien vocal avec nos Mentors. Rien de bien méchant, c'est juste pour savoir si vous avez les bases du RolePlay !</p>
-        <p>N'attendez plus, rejoingnez le <a href="#">discord</a> !</p>
+        <p>N'attendez plus, rejoignez le <a id="discord" href="#">Discord</a> !</p>
     </div>
 </div>
 {% endblock %}
