--- a/public/scss/_font.scss
+++ b/public/scss/_font.scss
@@ -2,3 +2,7 @@
     font-family: 'Poppins';
     src: url(../font/Poppins-Regular.ttf);
 }
+@font-face {
+    font-family: 'Roboto';
+    src: url(../font/Roboto-Regular.ttf);
+}
