--- a/public/scss/_join.scss
+++ b/public/scss/_join.scss
@@ -4,29 +4,62 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    .container-join:hover {
+        box-shadow: 5px 5px 10px black;
+    }
     .container-join {
         width: 50%;
-        background-color: rgba(60,60,60,0.6);
+        height: 70%;
+        background-color: rgba(60,60,60,0.8);
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         padding: 4em;
+        border-radius: 20px;
+        
         h2{
             color: white;
-            font-size: 34px;
-            font-family: 'Poppins';
-            margin-bottom: 1em;
+            font-size: 44px;
+            font-family: 'Roboto';
+            margin-bottom: 2em;
+            background-color: #1C1C1C;
+            width: 40%;
+            height: 10%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
         }
         p {
             color: white;
-            font-size: 24px;
+            font-size: 18px;
             font-family: 'Poppins';
+            line-height: 2em;
         }
         p:nth-child(2){
             margin-bottom: 1em;
         }
-        p:nth-child(3){
-            margin-bottom: 1em;
+        p:nth-child(4){
+            margin-top: 4em;
+            color: white;
+            font-size: 18px;
+            font-family: 'Roboto';
+            // margin-bottom: 2em;
+            background-color: $red;
+            width: 35%;
+            height: 8%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            #discord{
+                margin-left: 0.3em;
+                margin-right: 0.3em;
+                text-decoration: none;
+                color: black;
+            }
         }
     }
 }
