--- a/public/scss/_homepage.scss
+++ b/public/scss/_homepage.scss
@@ -21,7 +21,7 @@ body{
         }
     }
     .container-nav{
-        background-color: rgb(50, 50, 50);
+        background-color: rgb(40, 40, 40);
         border-bottom: 1px solid $red;
         display: flex;
         height: 10vh;
@@ -39,8 +39,12 @@ body{
                 display: flex;
                 text-align: center;
                 li{
-                    width: 20em;
-                    border: 1px solid rgb(50, 50, 50);
+                    height: 6em;
+                    width: 17em;
+                    border-right: 1px solid rgb(50, 50, 50);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     a{
                         position: relative;
                         font-family: 'Poppins';
@@ -51,6 +55,7 @@ body{
                     }
                     a:active{
                         border-bottom: 1px solid $red;
+                        color: $red;
                     }
                     a::after{
                         content: '';
@@ -68,6 +73,9 @@ body{
                     color: red;
                     background-color:$red;
                     width: 100%;
+                }
+                li:hover {
+                    background-color: rgb(50, 50, 50);
                 }
             }
         }
@@ -111,7 +119,7 @@ body{
             margin-left: 1.5em;
             font-family: 'Poppins';
             font-size: 20px;
-            background-color: rgb(50, 50, 50);
+            background-color: rgb(40, 40, 40);
             margin-right: 4px;
             a{
                 color: white;
@@ -119,21 +127,39 @@ body{
                 text-decoration: none;
             }
         }
+        #register:hover{
+            a{
+                color:$red;
+            }
+        }
         #login{
             font-family: 'Poppins';
             background-color: white;
             height: 2em;
-            width: 6em;
+            width: 9em;
             font-size: 20px;
             margin-right: 10px;
+            display: flex;
+            justify-content: center;
             a{
                 outline: none;
                 text-decoration: none;
                 color: black;
             }
         }
+        #login:hover {
+            background-color: rgb(40, 40, 40);
+            border:1px solid white;
+            a{
+                color: white;
+            }
+        }
         #login:active {
             background-color: $red;
+            border:1px solid rgb(40, 40, 40);
+            a{
+                color: rgb(40, 40, 40);
+            }
         }
 
         a {
@@ -156,6 +182,7 @@ body{
         #logout{
             font-family: 'Poppins';
             background-color: white;
+            border: 1px solid white;
             height: 2em;
             width: 7em;
             font-size: 20px;
@@ -169,6 +196,13 @@ body{
                 color: black;
             }
         }
+        #logout:hover{
+            background-color: rgb(40, 40, 40);
+            border: 1px solid white;
+            a{
+                color: white;
+            }
+        }
         #logout:active {
             background-color: $red;
         }
@@ -176,6 +210,7 @@ body{
         #profil{
             font-family: 'Poppins';
             background-color: white;
+            border: 1px solid white;
             height: 2em;
             width: 6em;
             font-size: 20px;
@@ -187,6 +222,13 @@ body{
                 outline: none;
                 text-decoration: none;
                 color: black;
+            }
+        }
+        #profil:hover{
+            background-color: rgb(40, 40, 40);
+            border: 1px solid white;
+            a{
+                color: white;
             }
         }
         #profil:active {
