--- a/public/scss/_soutien.scss
+++ b/public/scss/_soutien.scss
@@ -1,32 +1,53 @@
 #bg-img-soutien{
     background-image: url(../img/853464.jpg);
-    width: 100%;
     height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
-    .container-join {
+    align-items: center;
+
+    .container-soutien {
         width: 50%;
-        background-color: rgba(60,60,60,0.6);
+        height: 70%;
+        background-color: rgba(60,60,60,0.8);
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         padding: 4em;
+        border-radius: 20px;
+        
         h2{
             color: white;
-            font-size: 34px;
-            font-family: 'Poppins';
-            margin-bottom: 1em;
+            font-size: 40px;
+            font-family: 'Roboto';
+            margin-bottom: 2em;
+            background-color: #1C1C1C;
+            width: 60%;
+            height: 10%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
         }
         p {
             color: white;
-            font-size: 24px;
+            font-size: 18px;
             font-family: 'Poppins';
+            line-height: 2em;
+            text-shadow: 2px 2px 2px #000000;
         }
         p:nth-child(2){
             margin-bottom: 1em;
         }
         p:nth-child(3){
-            margin-bottom: 1em;
+            margin-bottom: 2em;
+        }
+        p:nth-child(4){
+            #paypal{
+                text-decoration: none;
+                color: $red;
+            }
         }
     }
 }
