--- a/templates/home/soutien.html.twig
+++ b/templates/home/soutien.html.twig
@@ -5,11 +5,11 @@
 {% block body %}
 {% include "common/_navbar.html.twig" %}
 <div id="bg-img-soutien">
-    <div class="container-join">
+    <div class="container-soutien">
         <h2>Vous souhaitez nous soutenir ?</h2>
         <p>Le serveur est en pleine croissance, tenu, modéré et payé par des bénévole.</p>
         <p>Nous faisons tout pour que chaque joueurs s'épanouisse dans son RP, aprés une longue journée de travail quoi de mieux que rejoindre ses amis en jeu !</p>
-        <p>Si vous le souhaitez, et ce n'est pas obligatoire, vous pouvez nous soutenir par le biai d'un don via <a href="#">PayPal</a>! Encore merci à vous d'être présent et de faire vivre et grandir NewNameRP !</p>
+        <p>Si vous le souhaitez, et ce n'est pas obligatoire, vous pouvez nous soutenir par le biai d'un don via <a id="paypal" href="#">PayPal</a> ! Encore merci à vous d'être présent et de faire vivre et grandir NewNameRP !</p>
     </div>
 </div>
 {% endblock %}
