--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -12,7 +12,7 @@
             <li><a href="{{path('app_gallery')}}">Galerie</a></li>
         </ul>
     </div>
-    <div>
+    <div class="container-nav-bis">
         {% if not app.user %}
             <div id="register"><a href="{{path('app_register')}}">Inscription</a></div>
             <div id="login"><a href="{{path('app_login')}}">Connexion</a></div>
