--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -47,7 +47,7 @@
             <div class="form">
                 {{ form_row(registrationForm.password) }}
             </div>
-            <div class="form">
+            <div class="form-agree">
                 {{ form_row(registrationForm.agreeTerms) }}
             </div>
             <button type="submit" id="register-btn" class="btn">Register</button>
