--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,7 +75,7 @@ body .container-logo i {
 }
 body .container-logo p {
   font-size: 24px;
-  font-family: "Poppins";
+  font-family: "Roboto";
 }
 body .container-nav {
   background-color: #282828;
@@ -107,7 +107,7 @@ body .container-nav div:nth-child(1) ul li {
 }
 body .container-nav div:nth-child(1) ul li a {
   position: relative;
-  font-family: "Poppins";
+  font-family: "Roboto";
   color: white;
   list-style: none;
   text-decoration: none;
@@ -159,30 +159,30 @@ body #bg-img .container-home #logo-nn {
 }
 body #bg-img .container-home h1:nth-child(2) {
   color: white;
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-size: 40px;
 }
-body div:nth-child(2) {
+body .container-nav-bis {
   display: flex;
   align-items: center;
 }
-body div:nth-child(2) #register {
+body .container-nav-bis #register {
   margin-left: 1.5em;
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-size: 20px;
   background-color: #282828;
   margin-right: 4px;
 }
-body div:nth-child(2) #register a {
+body .container-nav-bis #register a {
   color: white;
   outline: none;
   text-decoration: none;
 }
-body div:nth-child(2) #register:hover a {
+body .container-nav-bis #register:hover a {
   color: #AE2525;
 }
-body div:nth-child(2) #login {
-  font-family: "Poppins";
+body .container-nav-bis #login {
+  font-family: "Roboto";
   background-color: white;
   height: 2em;
   width: 9em;
@@ -190,41 +190,42 @@ body div:nth-child(2) #login {
   margin-right: 10px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
-body div:nth-child(2) #login a {
+body .container-nav-bis #login a {
   outline: none;
   text-decoration: none;
   color: black;
 }
-body div:nth-child(2) #login:hover {
+body .container-nav-bis #login:hover {
   background-color: #282828;
   border: 1px solid white;
 }
-body div:nth-child(2) #login:hover a {
+body .container-nav-bis #login:hover a {
   color: white;
 }
-body div:nth-child(2) #login:active {
+body .container-nav-bis #login:active {
   background-color: #AE2525;
   border: 1px solid #282828;
 }
-body div:nth-child(2) #login:active a {
+body .container-nav-bis #login:active a {
   color: #282828;
 }
-body div:nth-child(2) a i {
+body .container-nav-bis a i {
   color: white;
   margin-right: 5px;
   font-size: 20px;
 }
-body div:nth-child(2) a i:hover {
+body .container-nav-bis a i:hover {
   color: #AE2525;
 }
-body div:nth-child(2) p:nth-child(2) {
-  font-family: "Poppins";
+body .container-nav-bis p:nth-child(2) {
+  font-family: "Roboto";
   color: white;
   margin-right: 1em;
 }
-body div:nth-child(2) #logout {
-  font-family: "Poppins";
+body .container-nav-bis #logout {
+  font-family: "Roboto";
   background-color: white;
   border: 1px solid white;
   height: 2em;
@@ -235,23 +236,23 @@ body div:nth-child(2) #logout {
   justify-content: center;
   align-items: center;
 }
-body div:nth-child(2) #logout a {
+body .container-nav-bis #logout a {
   outline: none;
   text-decoration: none;
   color: black;
 }
-body div:nth-child(2) #logout:hover {
+body .container-nav-bis #logout:hover {
   background-color: #282828;
   border: 1px solid white;
 }
-body div:nth-child(2) #logout:hover a {
+body .container-nav-bis #logout:hover a {
   color: white;
 }
-body div:nth-child(2) #logout:active {
+body .container-nav-bis #logout:active {
   background-color: #AE2525;
 }
-body div:nth-child(2) #profil {
-  font-family: "Poppins";
+body .container-nav-bis #profil {
+  font-family: "Roboto";
   background-color: white;
   border: 1px solid white;
   height: 2em;
@@ -262,19 +263,19 @@ body div:nth-child(2) #profil {
   justify-content: center;
   align-items: center;
 }
-body div:nth-child(2) #profil a {
+body .container-nav-bis #profil a {
   outline: none;
   text-decoration: none;
   color: black;
 }
-body div:nth-child(2) #profil:hover {
+body .container-nav-bis #profil:hover {
   background-color: #282828;
   border: 1px solid white;
 }
-body div:nth-child(2) #profil:hover a {
+body .container-nav-bis #profil:hover a {
   color: white;
 }
-body div:nth-child(2) #profil:active {
+body .container-nav-bis #profil:active {
   background-color: #AE2525;
 }
 
@@ -287,7 +288,7 @@ body div:nth-child(2) #profil:active {
   align-items: center;
 }
 .container-form h1 {
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-size: 34px;
   color: white;
   margin-bottom: 1em;
@@ -350,7 +351,7 @@ body div:nth-child(2) #profil:active {
   font-family: "Poppins";
   width: 300px;
   height: 25px;
-  background-color: #464646;
+  background-color: #373737;
   border: 0px;
   border-bottom: 1px solid white;
   outline: none;
@@ -359,18 +360,33 @@ body div:nth-child(2) #profil:active {
   width: 300px;
   height: 25px;
 }
+.container-form .form-register .form-agree {
+  margin-bottom: 1em;
+}
+.container-form .form-register .form-agree label {
+  font-family: "Poppins";
+  color: white;
+  margin-top: 0.5rem;
+  margin-right: 1rem;
+  width: 180px;
+  font-size: 22px;
+}
+.container-form .form-register .form-agree input {
+  height: 20px;
+  width: 20px;
+}
 .container-form .form-register #register-btn {
   font-family: "Poppins";
   font-size: 20px;
   width: 8em;
   height: 2.5em;
-  background-color: #464646;
+  background-color: #373737;
   border: 1px solid white;
   color: white;
 }
 .container-form .form-register #register-btn:hover {
   background-color: white;
-  color: #464646;
+  color: #373737;
   border: 1px solid #464646;
 }
 
@@ -378,6 +394,7 @@ body div:nth-child(2) #profil:active {
   color: white;
   font-size: 22px;
   font-family: "Poppins";
+  text-shadow: 2px 2px 2px #000000;
 }
 .form-login input {
   outline: none;
@@ -401,24 +418,31 @@ body div:nth-child(2) #profil:active {
   background-color: #3c3c3c;
   border: 1px solid white;
   color: white;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 #login-btn:hover {
   background-color: white;
   color: #464646;
   border: 1px solid #464646;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 #login-btn:active {
   background-color: #AE2525;
   color: white;
   border: none;
+  text-shadow: 2px 2px 2px #000000;
 }
 
 .container-profil {
-  background-color: #414141;
+  background-color: #282828;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .container-profil div:first-child {
   display: flex;
@@ -426,9 +450,10 @@ body div:nth-child(2) #profil:active {
   padding-top: 1em;
 }
 .container-profil div:first-child h2 {
-  font-family: "Poppins";
+  font-family: "Roboto";
   font-size: 34px;
   color: white;
+  text-shadow: 2px 2px 2px #000000;
 }
 .container-profil .confirm-delete {
   display: none;
@@ -471,7 +496,7 @@ body div:nth-child(2) #profil:active {
   background-color: green;
 }
 .container-profil .confirm-delete div:nth-child(2) button:nth-child(2):hover {
-  background-color: #9e0101;
+  background-color: #AE2525;
 }
 .container-profil .bigcontainer-grey {
   display: flex;
@@ -488,11 +513,10 @@ body div:nth-child(2) #profil:active {
   margin-left: 4em;
   margin-bottom: 1em;
   padding: 3em;
-  background-color: #3c3c3c;
+  background-color: #323232;
   width: 24em;
   height: 6em;
   border-radius: 10px;
-  border: 1px solid grey;
 }
 .container-profil .bigcontainer-grey .container-grey a #icon-edit {
   position: absolute;
@@ -506,7 +530,7 @@ body div:nth-child(2) #profil:active {
   top: 10px;
   left: 415px;
   font-size: 24px;
-  color: #9e0101;
+  color: #AE2525;
 }
 .container-profil .bigcontainer-grey .container-grey a #icon-edit-cars {
   position: absolute;
@@ -547,18 +571,27 @@ body div:nth-child(2) #profil:active {
   font-family: "Poppins";
   font-size: 22px;
   margin-bottom: 0.1em;
+  text-shadow: 2px 2px 2px #000000;
+}
+.container-profil .bigcontainer-grey .container-grey ul span {
+  color: #AE2525;
 }
 .container-profil .bigcontainer-grey .container-grey ul li {
   color: white;
   font-family: "Poppins";
   font-size: 22px;
   margin-bottom: 0.1em;
+  text-shadow: 2px 2px 2px #000000;
 }
 .container-profil .bigcontainer-grey .container-grey p {
   color: white;
   font-family: "Poppins";
   font-size: 22px;
   margin-bottom: 0.1em;
+  text-shadow: 2px 2px 2px #000000;
+}
+.container-profil .bigcontainer-grey .container-grey p span {
+  color: #AE2525;
 }
 
 .container-popupcars {
@@ -701,18 +734,19 @@ body div:nth-child(2) #profil:active {
   justify-content: center;
   align-items: center;
 }
+.container-form-edit h1 {
+  font-family: "Roboto";
+}
 .container-form-edit form:nth-child(2) {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #3c3c3c;
+  background-color: #323232;
   padding-top: 40px;
   padding-bottom: 20px;
   width: 600px;
-  border: 1px solid grey;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px grey;
 }
 .container-form-edit .form-edit > div {
   color: white;
@@ -725,6 +759,18 @@ body div:nth-child(2) #profil:active {
   margin-left: 1em;
 }
 .container-form-edit .form-edit > div input {
+  outline: none;
+  border: 0px;
+  border-bottom: 1px solid grey;
+  background-color: #464646;
+  width: 200px;
+  height: 1.8em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  color: white;
+  font-family: "Poppins";
+}
+.container-form-edit .form-edit > div select {
   outline: none;
   border: 0px;
   border-bottom: 1px solid grey;
@@ -827,6 +873,7 @@ body div:nth-child(2) #profil:active {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  text-shadow: 2px 2px 2px #000000;
 }
 #bg-img-join .container-join p:nth-child(4) #discord {
   margin-left: 0.3em;
