--- a/public/scss/_join.scss
+++ b/public/scss/_join.scss
@@ -54,6 +54,8 @@
             justify-content: center;
             align-items: center;
             border-radius: 10px;
+            text-shadow: 2px 2px 2px #000000;
+
             #discord{
                 margin-left: 0.3em;
                 margin-right: 0.3em;
