--- a/public/scss/_login.scss
+++ b/public/scss/_login.scss
@@ -2,6 +2,8 @@
     color: white;
     font-size: 22px;
     font-family: 'Poppins';
+    text-shadow: 2px 2px 2px #000000;
+
     input{
         outline: none;
         border: 0px;
@@ -25,14 +27,20 @@
     background-color: rgb(60, 60, 60);
     border: 1px solid white;
     color: white;
+    text-shadow: 2px 2px 2px #000000;
+
 }
 #login-btn:hover{
     background-color: white;
     color: rgb(70, 70, 70);
     border: 1px solid rgb(70, 70, 70);
+    text-shadow: 2px 2px 2px #000000;
+
 }
 #login-btn:active{
     background-color: $red;
     color: white;
     border: none;
+    text-shadow: 2px 2px 2px #000000;
+
 }
