--- a/templates/common/_navbar.html.twig
+++ b/templates/common/_navbar.html.twig
@@ -1,7 +1,7 @@
 <div class="container-logo">
     <img src="{{asset('/img/LogoNN.png')}}" alt="logo newname">
     {# <i id="arrow-logo" class="fas fa-long-arrow-alt-left"></i> #}
-    <p class="menu-logo">Menu</p>
+    {# <p class="menu-logo">Menu</p> #}
 </div>
 <nav class="container-nav">
     <div>
