--- a/templates/home/gallery.html.twig
+++ b/templates/home/gallery.html.twig
@@ -4,9 +4,14 @@
 
 {% block body %}
 {% include "common/_navbar.html.twig" %}
-<div id="bg-img-gallery">
-    <div class="container-gallery">
-        
-    </div>
+
+<div class="container-gallery">
+    <img class="img-gallery" src="{{asset("img/20210713233053_1.jpg")}}" alt="">
+    <img class="img-gallery" src="{{asset("img/HELICO.png")}}" alt="">
+    <img class="img-gallery" src="{{asset("img/20210721232840_1.jpg")}}" alt="">
+    <img class="img-gallery" src="{{asset("img/EquipedeChoc.png")}}" alt="">
+    <img class="img-gallery" src="{{asset("img/DANSEMAXUNICORN.png")}}" alt="">
+    <img class="img-gallery" src="{{asset("img/SortieVoilier.png")}}" alt="">
 </div>
+
 {% endblock %}
