--- a/public/scss/_homepage.scss
+++ b/public/scss/_homepage.scss
@@ -1,4 +1,5 @@
 body{
+    background-color: rgb(40, 40, 40);
     .container-logo {
         position: fixed;
         width: 150px;
@@ -25,7 +26,7 @@ body{
         border-bottom: 1px solid $red;
         display: flex;
         height: 10vh;
-        position: absolute;
+        // position: absolute;
         width: 100vw;
 
         div:nth-child(1){
